--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             >Web<span class="logo-2-part">Studio</span></a
           >
           <ul class="header-link-list">
-            <li><a href="./index.html" class="link-header">Studio</a></li>
+            <li>
+              <a href="./index.html" class="link-header current">Studio</a>
+            </li>
             <li><a href="" class="link-header">Portfolio</a></li>
             <li><a href="" class="link-header">Contacts</a></li>
           </ul>
@@ -61,8 +63,8 @@
           <ul class="card-set">
             <li class="card-set-item">
               <div class="background-card">
-                <svg class="card-sprite" width="264" height="112">
-                  <use href="./images/icons.svg#icon-Icon-1"></use>
+                <svg class="card-sprite" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="feature-title">Strategy</h3>
@@ -73,8 +75,8 @@
             </li>
             <li class="card-set-item">
               <div class="background-card">
-                <svg class="card-sprite" width="264" height="112">
-                  <use href="./images/icons.svg#icon-Icon-2"></use>
+                <svg class="card-sprite" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="feature-title">Punctuality</h3>
@@ -85,8 +87,8 @@
             </li>
             <li class="card-set-item">
               <div class="background-card">
-                <svg class="card-sprite" width="264" height="112">
-                  <use href="./images/icons.svg#icon-Icon-3"></use>
+                <svg class="card-sprite" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="feature-title">Diligence</h3>
@@ -97,8 +99,8 @@
             </li>
             <li class="card-set-item">
               <div class="background-card">
-                <svg class="card-sprite" width="264" height="112">
-                  <use href="./images/icons.svg#icon-Icon-4"></use>
+                <svg class="card-sprite" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="feature-title">Technologies</h3>
@@ -127,7 +129,7 @@
                       class="link"
                       aria-label="иконка Инстаграм"
                     >
-                      <svg class="link-icon" width="40" height="40">
+                      <svg class="link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -138,7 +140,7 @@
                       class="link"
                       aria-label="иконка Твиттер"
                     >
-                      <svg class="link-icon" width="40" height="40">
+                      <svg class="link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -149,7 +151,7 @@
                       class="link"
                       aria-label="иконка Фейсбук"
                     >
-                      <svg class="link-icon" width="40" height="40">
+                      <svg class="link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -160,7 +162,7 @@
                       class="link"
                       aria-label="иконка Линкедин"
                     >
-                      <svg class="link-icon" width="40" height="40">
+                      <svg class="link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -180,7 +182,7 @@
                       class="link"
                       aria-label="иконка Инстаграм"
                     >
-                      <svg class="link-icon" width="40" height="40">
+                      <svg class="link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -191,7 +193,7 @@
                       class="link"
                       aria-label="иконка Твиттер"
                     >
-                      <svg class="link-icon" width="40" height="40">
+                      <svg class="link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -202,7 +204,7 @@
                       class="link"
                       aria-label="иконка Фейсбук"
                     >
-                      <svg class="link-icon" width="40" height="40">
+                      <svg class="link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -213,7 +215,7 @@
                       class="link"
                       aria-label="иконка Линкедин"
                     >
-                      <svg class="link-icon" width="40" height="40">
+                      <svg class="link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -233,7 +235,7 @@
                       class="link"
                       aria-label="иконка Инстаграм"
                     >
-                      <svg class="link-icon" width="40" height="40">
+                      <svg class="link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -244,7 +246,7 @@
                       class="link"
                       aria-label="иконка Твиттер"
                     >
-                      <svg class="link-icon" width="40" height="40">
+                      <svg class="link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -255,7 +257,7 @@
                       class="link"
                       aria-label="иконка Фейсбук"
                     >
-                      <svg class="link-icon" width="40" height="40">
+                      <svg class="link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -266,7 +268,7 @@
                       class="link"
                       aria-label="иконка Линкедин"
                     >
-                      <svg class="link-icon" width="40" height="40">
+                      <svg class="link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -287,7 +289,7 @@
                       class="link"
                       aria-label="иконка Инстаграм"
                     >
-                      <svg class="link-icon" width="40" height="40">
+                      <svg class="link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -298,7 +300,7 @@
                       class="link"
                       aria-label="иконка Твиттер"
                     >
-                      <svg class="link-icon" width="40" height="40">
+                      <svg class="link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -309,7 +311,7 @@
                       class="link"
                       aria-label="иконка Фейсбук"
                     >
-                      <svg class="link-icon" width="40" height="40">
+                      <svg class="link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -320,7 +322,7 @@
                       class="link"
                       aria-label="иконка Линкедин"
                     >
-                      <svg class="link-icon" width="40" height="40">
+                      <svg class="link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -446,7 +448,7 @@
                 class="link-footer"
                 aria-label="иконка Инстаграм"
               >
-                <svg class="link-icon" width="40" height="40">
+                <svg class="link-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
@@ -458,7 +460,7 @@
                 class="link-footer"
                 aria-label="иконка Твиттер"
               >
-                <svg class="link-icon" width="40" height="40">
+                <svg class="link-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -470,7 +472,7 @@
                 class="link-footer"
                 aria-label="иконка Фейсбук"
               >
-                <svg class="link-icon" width="40" height="40">
+                <svg class="link-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
@@ -482,7 +484,7 @@
                 class="link-footer"
                 aria-label="иконка Линкедин"
               >
-                <svg class="link-icon" width="40" height="40">
+                <svg class="link-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -520,7 +522,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button class="modal__button-close" type="button" data-modal-close>
           <svg
